<resources>
    <string name="app_name">Music</string>
    <string name="app_author">spir0th</string>
    <string name="content_desc_player_cover_art">Cover art for current media</string>
    <string name="content_desc_player_skip_previous">Skip to previous media</string>
    <string name="content_desc_player_playback">Play or pause media</string>
    <string name="content_desc_player_skip_next">Skip to next media if available</string>
    <string name="content_desc_settings_editor_add">Add a new preference item</string>
    <string name="player_seek_reset">0:00</string>
    <string name="player_seek_format">%1$d:%2$s</string>
    <string name="player_seek_format_hrs">%1$d:%2$d:%3$s</string>
    <string name="player_non_persistence_disabled">This audio file requires non-persistence playback to be enabled.</string>
    <string name="player_file_unloaded">No audio file is playing</string>
    <string name="player_file_error">An unexpected error occurred while trying to play the audio file.</string>
    <string name="device_info_title">Device information</string>
    <string name="device_info_device">Device: %1$s</string>
    <string name="device_info_brand">Brand: %1$s</string>
    <string name="device_info_model">Model: %1$s</string>
    <string name="device_info_product">Product: %1$s</string>
    <string name="device_info_manufacturer">Manufacturer: %1$s</string>
    <string name="device_info_supported_abis">Supported ABIs: %1$s</string>
    <string name="device_info_os_base">OS base: %1$s</string>
    <string name="device_info_os_codename">OS codename: %1$s</string>
    <string name="device_info_os_release">OS release: %1$s</string>
    <string name="device_info_os_sdk_version">OS SDK version: %1$d</string>
    <string name="device_info_os_security_patch">OS security patch: %1$s</string>
    <string name="device_info_package_name">Package name: %1$s</string>
    <string name="device_info_package_version">Version: %1$s</string>
    <string name="device_info_package_version_code">Code: %1$d</string>
    <string name="device_info_package_type">Type: %1$s</string>
    <string name="device_info_dump_file">Dump info to file</string>
    <string name="device_info_dump_file_success">Dump info to file successful!</string>
    <string name="device_info_dump_file_fail_not_found">File not found while dumping information.</string>
    <string name="device_info_dump_file_fail_io">Cannot perform IO operations right now, try again later.</string>
    <string name="device_info_refresh">Refresh</string>
    <string name="device_info_refresh_success">Refreshed</string>
    <string name="service_info_title">Playback service info</string>
    <string name="service_info_running">Is service running: %1$b</string>
    <string name="service_info_connected">Is connected to session: %1$b</string>
    <string name="service_info_previous">Has previous item: %1$b</string>
    <string name="service_info_next">Has next item: %1$b</string>
    <string name="service_info_playback_state">Playback state: %1$d</string>
    <string name="service_info_media_count">Total media count: %1$d</string>
    <string name="service_info_media_index"> Media index: %1$d</string>
    <string name="service_info_duration">Duration: %1$d</string>
    <string name="service_info_duration_position">Duration position: %1$d</string>
    <string name="service_info_device_volume_max">Device max volume: %1$d</string>
    <string name="service_info_device_volume_min">Device min volume: %1$d</string>
    <string name="service_info_device_volume_current">Device current volume: %1$d</string>
    <string name="service_info_clear_media_items">Clear media items</string>
    <string name="service_info_clear_media_items_success">Removed %1$d items from service session</string>
    <string name="service_info_clear_media_items_fail">Cannot remove items, maybe the service session is disconnected?</string>
    <string name="service_info_create_media_item">Create new item</string>
    <string name="service_info_create_media_item_success">New media item added to service session</string>
    <string name="service_info_create_media_item_fail">Cannot transact media item, maybe the service session is disconnected?</string>
    <string name="service_info_connect_session">Connect session</string>
    <string name="service_info_connect_session_success">Connection to service session successful</string>
    <string name="service_info_disconnect_session">Disconnect session</string>
    <string name="service_info_disconnect_session_success">Disconnected from service session</string>
    <string name="prefs_editor_title">Settings editor</string>
    <string name="prefs_editor_create_item_title">Create preference item</string>
    <string name="prefs_editor_create_item_key_hint">Key</string>
    <string name="prefs_editor_delete_item_title">Delete preference item</string>
    <string name="prefs_editor_delete_item_message">Are you sure you want to delete %1$s?</string>
    <string name="prefs_editor_delete_item_positive">Yes</string>
    <string name="prefs_editor_delete_item_negative">No</string>
    <string name="settings_title">Settings</string>
    <string name="settings_restart">This setting requires a restart to take effect.</string>
    <string name="prefs_appearance">Appearance</string>
    <string name="prefs_appearance_s">Customize the look and feel</string>
    <string name="prefs_appearance_app">Application</string>
    <string name="prefs_appearance_app_dynamic_colors">Dynamic color</string>
    <string name="prefs_appearance_app_dynamic_colors_s">Match app color scheme with the current wallpaper or through a selected color in the wallpaper picker</string>
    <string name="prefs_appearance_player">Player</string>
    <string name="prefs_appearance_player_dynamic_controls">Dynamic controls</string>
    <string name="prefs_appearance_player_dynamic_controls_s">Player controls will react to playlist changes and transitions</string>
    <string name="prefs_appearance_player_immersive_on_landscape">Immersive landscape</string>
    <string name="prefs_appearance_player_immersive_on_landscape_s">Hide the system bars when player is in Landscape orientation</string>
    <string name="prefs_appearance_other">Other</string>
    <string name="prefs_appearance_other_immersive">Immersive mode</string>
    <string name="prefs_audio">Audio</string>
    <string name="prefs_audio_s">Change how the playback behaves</string>
    <string name="prefs_audio_playback">Playback</string>
    <string name="prefs_audio_playback_audio_focus">Audio focus</string>
    <string name="prefs_audio_playback_audio_focus_s">Prevent audio playback from simultaneously playing with other apps</string>
    <string name="prefs_audio_playback_stop_on_exit">Stop playback when exit</string>
    <string name="prefs_audio_playback_stop_on_exit_s">Audio playback will be stopped when pressing back button in player</string>
    <string name="prefs_audio_playback_time_get_duration">Time to get duration</string>
    <string name="prefs_audio_provider">Provider</string>
    <string name="prefs_audio_provider_metadata_fetching">Metadata fetching</string>
    <string name="prefs_audio_provider_metadata_fetching_s">When enabled, metadata will be used to display player information instead of filename</string>
    <string name="prefs_audio_persistence">Persistence</string>
    <string name="prefs_audio_persistence_non_persistent_playback">Non-persistent playback</string>
    <string name="prefs_audio_persistence_non_persistent_playback_s_off">The application will no longer handle non-persistent audio.</string>
    <string name="prefs_audio_persistence_non_persistent_playback_s_on">Don\'t disable this option unless you know what you are doing.</string>
    <string name="prefs_audio_persistence_clean">Clean unneeded persists</string>
    <string name="prefs_about">About</string>
    <string name="prefs_about_s">See what\'s up for this application</string>
    <string name="prefs_about_name">Music</string>
    <string name="prefs_about_version">Version %1$s</string>
    <string name="prefs_about_updates">Check for updates</string>
    <string name="prefs_about_experiments">Experiments</string>
    <string name="prefs_about_experiments_enabled">Congratulations! You have unlocked experimental features, have fun!</string>
    <string name="prefs_about_experiments_disabled">Experimental features have been disabled, have fun next time!</string>
    <string name="prefs_about_dev">Development</string>
    <string name="prefs_about_dev_github">GitHub</string>
    <string name="prefs_about_dev_github_url">https://github.com/spir0th/music</string>
    <string name="prefs_about_dev_donate">Donate</string>
    <string name="prefs_about_dev_donate_s">Support the developer by making coffee!</string>
    <string name="prefs_experimental">Experimental settings</string>
    <string name="prefs_experimental_logs">View application logs</string>
    <string name="prefs_experimental_logs_empty">There are no saved logs yet.</string>
    <string name="prefs_experimental_service_info">Playback service info</string>
    <string name="prefs_experimental_device_info">Device information</string>
    <string name="prefs_experimental_settings_editor">Preferences editor</string>
    <string name="prefs_experimental_force_restart">Force reboot</string>
    <string name="dialog_restart_title">Do you want to restart?</string>
    <string name="dialog_restart_positive">Yes</string>
    <string name="dialog_restart_negative">No</string>
    <string name="dialog_restart_optional_title">Restart?</string>
    <string name="dialog_restart_optional_message">Changing this setting requires a restart to take effect, do it now?</string>
    <string name="dialog_restart_optional_positive">Sure</string>
    <string name="dialog_restart_optional_negative">Not now</string>
    <string name="dialog_dynamic_colors_restart_title">@string/dialog_restart_optional_title</string>
    <string name="dialog_dynamic_colors_restart_message">Toggling dynamic colors requires a restart to take effect, do it now?</string>
    <string name="dialog_dynamic_colors_restart_positive">@string/dialog_restart_optional_positive</string>
    <string name="dialog_dynamic_colors_restart_negative">@string/dialog_restart_optional_negative</string>
    <string name="dialog_clean_persistence_title">Delete persistent files?</string>
    <string name="dialog_clean_persistence_message">Cleaning them right now needs the application to be restarted.</string>
    <string name="dialog_clean_persistence_positive">Yes</string>
    <string name="dialog_clean_persistence_negative">No</string>
    <string name="dialog_disable_experimental_features_title">Disable experimental features?</string>
    <string name="dialog_disable_experimental_features_message">If you disable it, you will lose access to the god-tier menu!</string>
    <string name="dialog_disable_experimental_features_positive">Yes</string>
    <string name="dialog_disable_experimental_features_negative">No</string>
    <string name="dialog_clear_media_items_title">Clear media items?</string>
    <string name="dialog_clear_media_items_message">Items that are added onto the current queue will be lost!</string>
    <string name="dialog_clear_media_items_positive">Confirm</string>
    <string name="dialog_clear_media_items_negative">Cancel</string>
    <string name="dialog_create_media_item_title">Create a new media item</string>
    <string name="dialog_create_media_item_positive">Add</string>
    <string name="dialog_create_media_item_negative">Cancel</string>
    <string name="dialog_settings_edit_positive">OK</string>
    <string name="dialog_settings_edit_negative">Cancel</string>
    <string name="dialog_settings_edit_alert_title">Warning</string>
    <string name="dialog_settings_edit_alert_message">Changing values may lead the application to crash unexpectedly, use it at your own risk!</string>
</resources>