<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/prefs_audio_playback">

        <CheckBoxPreference
            app:key="audio_focus"
            app:defaultValue="true"
            app:title="@string/prefs_audio_playback_audio_focus"
            app:summary="@string/prefs_audio_playback_audio_focus_s" />
        <EditTextPreference
            app:key="time_get_duration"
            app:defaultValue="1000"
            app:title="@string/prefs_audio_playback_time_get_duration" />
    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/prefs_audio_provider">

        <CheckBoxPreference
            app:key="metadata"
            app:defaultValue="true"
            app:title="@string/prefs_audio_provider_metadata_fetching"
            app:summary="@string/prefs_audio_provider_metadata_fetching_s" />
    </PreferenceCategory>
</PreferenceScreen>