<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        app:key="name"
        app:icon="@drawable/baseline_audio_file_24"
        app:title="@string/app_name"
        app:summary="@string/prefs_about_version" />
    <Preference
        app:enabled="false"
        app:icon="@drawable/baseline_update_24"
        app:title="@string/prefs_about_updates" />
    <PreferenceCategory
        app:title="@string/prefs_about_dev">

        <Preference
            app:key="github"
            app:title="@string/prefs_about_dev_github" />
        <Preference
            app:enabled="false"
            app:icon="@drawable/baseline_send_24"
            app:title="@string/prefs_about_dev_donate"
            app:summary="@string/prefs_about_dev_donate_s" />
    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/prefs_about_help">

        <Preference
            app:key="feedback"
            app:icon="@drawable/baseline_feedback_24"
            app:title="@string/prefs_about_help_feedback"
            app:summary="@string/prefs_about_help_feedback_s">

            <intent
                android:targetPackage="io.github.spir0th.music"
                android:targetClass="io.github.spir0th.music.activities.FeedbackActivity" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>