<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.DayNight" />

    <ScrollView
        android:id="@+id/scroller"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/button_center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/clear_media_items"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/service_info_clear_media_items"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/create_new_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/service_info_create_media_item"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/connect_session"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/service_info_connect_session"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/disconnect_session"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/service_info_disconnect_session"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</LinearLayout>