<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="32dp"
        android:paddingEnd="64dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/player_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.Material3.ActionBar.Title" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/player_caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.Material3.ActionBar.Subtitle" />
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="250dp"
            android:layout_height="250dp">

            <ImageView
                android:id="@+id/player_cover_art"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/content_desc_player_cover_art" />

            <View
                android:id="@+id/player_dim"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/transition_background_dim" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/player_indicator"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:indeterminate="true" />
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/player_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/player_playback"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/content_desc_player_playback"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:src="@drawable/baseline_play_arrow_24" />

            <com.google.android.material.slider.Slider
                android:id="@+id/player_slider"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/player_seek_position"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/player_seek_reset"
                android:textAppearance="@style/TextAppearance.Material3.BodySmall" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>